k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apitest
spec:
  selector:
    app: apitest
  type: ClusterIP
  ports:
  - name: apitest
    protocol: TCP
    port: 80
    targetPort: 8080
