k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apitest
spec:
  tls:
  - hosts:
      - apitest.jamesmcdonald.com
    secretName: apitest
  rules:
  - host: apitest.jamesmcdonald.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apitest
            port:
              number: 80
